--- a/css/header.css
+++ b/css/header.css
@@ -8,6 +8,14 @@
     overflow-x: hidden;
 }
 
+img {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+  
+
 a {
     text-decoration: none;
 }
