--- a/css/index.css
+++ b/css/index.css
@@ -49,6 +49,10 @@
     filter: blur(100px);
 }
 
+.div-dcs{
+    display: none;
+}
+
 @media screen and (max-width:1038px) {
 
     .herosection-text {
@@ -166,13 +170,21 @@
 
 .text1{
     position: absolute;
-    left: 10%;
+    left: 5%;
     margin-top: 20px;
     color: black; 
     font-size: 40px; 
     font-family: "Poppins"; 
     font-weight: 500; 
     word-wrap: break-word;
+    padding: 0% 5% 0%;
+}
+
+@media screen and (max-width:700px){
+
+    .text1{
+        font-size: 32px;
+    }
 }
 
 .div-dc{
@@ -187,7 +199,7 @@
     height: max(460px);
 }
 
-@media screen and (max-width:855px) and (min-width:600px) {
+@media screen and (max-width:855px) {
     .div-dc img{
         width: auto;
         height: max(320px);
@@ -198,34 +210,33 @@
     }
 }
 
-@media screen and (max-width:608px) {
+@media screen and (max-width:550px){
     
-    .text1{
-        font-size: 32px; 
-    }
-
     .div-dc{
-        padding: 20% 0% 0%;
+        display: none;
     }
 
-    .div-dc img{
+    .div-dcs{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 30% 10% 0%;
+    }
+
+    .div-dcs img{
         width: auto;
-        height: max(250px);
+        height: max(450px);
     }
 }
 
-@media screen and (max-width:440px) {
+@media screen and (max-width:390px) {
     
-    .text1{
-        font-size: 26px; 
+    .div-dcs{
+        padding: 30% 10% 0%;
     }
 
-    .div-dc{
-        padding: 30% 0% 0%;
-    }
-
-    .div-dc img{
+    .div-dcs img{
         width: auto;
-        height: max(180px);
+        height: min(350px);
     }
 }
